--- a/portfolio.html
+++ b/portfolio.html
@@ -87,13 +87,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-1.jpg"
-                  alt="people who working in our company"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-1.jpg"
+                    alt="people who working in our company"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name">Технокряк</h2>
                   <p class="subtitle-img">Веб-сайт</p>
@@ -107,13 +116,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-2.jpg"
-                  alt="two men are plaing basketball"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-2.jpg"
+                    alt="two men are plaing basketball"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                   <p class="subtitle-img">Дизайн</p>
@@ -127,13 +145,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-3.jpg"
-                  alt="seafoot restaurant logo"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-3.jpg"
+                    alt="seafoot restaurant logo"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="subtitle-img">Додаток</p>
@@ -147,13 +174,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-4.jpg"
-                  alt="headphones"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-4.jpg"
+                    alt="headphones"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name">Проєкт <span lang="en">Prime</span></h2>
                   <p class="subtitle-img">Маркетинг</p>
@@ -167,13 +203,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-5.jpg"
-                  alt="two boxes"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-5.jpg"
+                    alt="two boxes"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="subtitle-img">Додаток</p>
@@ -187,13 +232,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-6.jpg"
-                  alt="the monitor"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-6.jpg"
+                    alt="the monitor"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name"><span lang="en">Inspiration has no Borders</span></h2>
                   <p class="subtitle-img">Веб-сайт</p>
@@ -207,13 +261,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-7.jpg"
-                  alt="the magazin"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-7.jpg"
+                    alt="the magazin"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="subtitle-img">Дизайн</p>
@@ -227,13 +290,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-8.jpg"
-                  alt="the label"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-8.jpg"
+                    alt="the label"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name">Проєкт <span lang="en">LAB</span></h2>
                   <p class="subtitle-img">Маркетинг</p>
@@ -247,13 +319,22 @@
                 target="_blank"
                 rel="noopener noreferrer"
               >
-                <img
-                  class="img"
-                  src="./images/портфоліо/img-9.jpg"
-                  alt="the laptop"
-                  width="370"
-                  height="294"
-                />
+                <div class="portfolio-thumb">
+                  <img
+                    class="img"
+                    src="./images/портфоліо/img-9.jpg"
+                    alt="the laptop"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="overlay">
+                    <p class="overlay-desc"
+                      >Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                      сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                      компанію чи приватну особу.</p
+                    >
+                  </div>
+                </div>
                 <div class="portfolio-card-container">
                   <h2 class="img-name"><span lang="en">Growing Business</span></h2>
                   <p class="subtitle-img">Додаток</p>
