--- a/index.html
+++ b/index.html
@@ -567,6 +567,18 @@
             </li>
           </ul>
         </div>
+        <form class="subscription">
+          <strong class="subscription-title">Підпишіться на розсилку</strong>
+          <label>
+            <input type="email" name="mail" placeholder="E-mail" required />
+          </label>
+          <button type="submit"
+            >Підписатися
+            <svg width="24" height="24">
+              <use href=""></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
     <!-- Modal window -->
@@ -577,6 +589,44 @@
             <use href="./images/icons.svg#close"></use>
           </svg>
         </button>
+        <form class="register-form" name="register-form">
+          <strong class="register-form-title">Залиште свої дані, ми вам передзвонимо</strong>
+          <div class="register-form-group" role="group">
+            <label>
+              <span>Ім'я</span>
+              <input type="text" name="user-name" required />
+              <svg width="18" height="18">
+                <use href=""></use>
+              </svg>
+            </label>
+            <label>
+              <span>Телефон</span>
+              <input type="tel" name="user-phone" required />
+              <svg width="18" height="18">
+                <use href=""></use>
+              </svg>
+            </label>
+            <label>
+              <span>Пошта</span>
+              <input type="email" name="user-mail" required />
+              <svg width="18" height="18">
+                <use href=""></use>
+              </svg>
+            </label>
+            <label>
+              <span>Коментар</span>
+              <textarea name="comment" rows="5" placeholder="Введіть текст"></textarea>
+            </label>
+          </div>
+          <label>
+            <input type="checkbox" name="agree" required />
+            <span
+              >Погоджуюся з розсилкою та приймаю
+              <a href="#">Умови договору</a>
+            </span>
+          </label>
+          <button type="submit">Відправити</button>
+        </form>
       </div>
     </div>
 
