--- a/portfolio.html
+++ b/portfolio.html
@@ -428,6 +428,18 @@
             </li>
           </ul>
         </div>
+        <form class="subscription">
+          <strong class="subscription-title">Підпишіться на розсилку</strong>
+          <label>
+            <input type="email" name="mail" placeholder="E-mail" required />
+          </label>
+          <button type="submit"
+            >Підписатися
+            <svg width="24" height="24">
+              <use href=""></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
   </body>
